--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 pandas==1.4.4
 streamlit==1.17.0
-scikit-learn
-numpy
-sklearn.tree
+numpy==1.21.5
+scikit-learn==1.02
+flask==1.1.2
+cloudpickle==2.0.0
+pickleshare==0.7.5
+
